# cosmotop

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
.bodega/: config.yaml
.github/workflows/: build.yml  build_standalone.yml  check_cosmocc_releases.yml  release.yml
cmake/: PlatformSources.cmake
cmake/Modules/: Finddevstat.cmake  Findkstat.cmake
desktop/: README.md  go.mod  go.sum  main.go  main_passthrough_io_unix.go  main_passthrough_io_windows.go  main_test.go  wails.json
desktop/frontend/: index.html  package-lock.json  package.json  package.json.md5
desktop/frontend/src/: main.js  style.css
desktop/frontend/wailsjs/go/app/: App.d.ts  App.js
desktop/internal/app/: app.go
desktop/internal/bundle/: embed.go  embed_common.go  embed_test.go  embed_unix.go  embed_windows.go
desktop/internal/bundle/data/: README.md  cosmotop  cosmotop.cmd
desktop/internal/runtime/: extractor.go  extractor_test.go  launcher.go  launcher_unix.go  launcher_windows.go
desktop/internal/terminal/: console_unix.go  console_windows.go  manager.go  manager_test.go  pty.go  pty_unix.go  pty_windows.go
img/: generate_logo.py
include/: httplib.h
polyglot/: cosmotop.cmd.tmpl  make_polyglot.py
src/: btop.cpp  btop_config.cpp  btop_config.hpp  btop_draw.cpp  btop_draw.hpp  btop_input.cpp  btop_input.hpp  btop_menu.cpp  btop_menu.hpp  btop_plugin.cpp  btop_plugin.hpp  btop_shared.cpp  btop_shared.hpp  btop_theme.cpp  btop_theme.hpp  btop_tools.hpp  btop_tools_host.cpp  btop_tools_shared.cpp  cosmotop.cpp  cosmotop_config.cpp  cosmotop_config.hpp  cosmotop_draw.cpp  cosmotop_draw.hpp  cosmotop_embeds.cpp  cosmotop_embeds.hpp  cosmotop_input.cpp  cosmotop_input.hpp  cosmotop_mcp.cpp  cosmotop_mcp.hpp  cosmotop_menu.cpp  cosmotop_menu.hpp  cosmotop_plugin.cpp  cosmotop_plugin.hpp  cosmotop_prometheus.hpp  cosmotop_shared.cpp  cosmotop_shared.hpp  cosmotop_theme.cpp  cosmotop_theme.hpp  cosmotop_tools.hpp  cosmotop_tools_host.cpp  (+2 more)
src/dragonfly/: cosmotop_collect.cpp
src/freebsd/: btop_collect.cpp  cosmotop_collect.cpp
src/haiku/: cosmotop_collect.cpp
src/hurd/: cosmotop_collect.cpp
src/linux/: CMakeLists.txt  btop_collect.cpp  cosmotop_collect.cpp
src/linux/intel_gpu_top/: intel_name_lookup_shim.c
src/netbsd/: btop_collect.cpp  cosmotop_collect.cpp
src/openbsd/: btop_collect.cpp  cosmotop_collect.cpp  sysctlbyname.cpp
src/osx/: btop_collect.cpp  cosmotop_collect.cpp  ioreport.cpp  ioreport.hpp  smc.cpp  smc.hpp
src/solaris/: cosmotop_collect.cpp
src/windows/: cosmotop_collect.cpp  docker_http_client.cpp  docker_http_client.hpp
themes/: gruvbox_light.theme  gruvbox_material_dark.theme
tools/: generate_embeds.py  mkbundle.py  zig
zigshim/: zig
